[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Spritesheets/Sly/sly_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Textures/light_texture.png" type="Texture" id=3]
[ext_resource path="res://SoundEffects/step.wav" type="AudioStream" id=4]
[ext_resource path="res://SoundEffects/pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://SoundEffects/hurt.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Back"
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Front"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 4
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/Back = SubResource( 2 )
anims/Front = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 1024
limit_smoothed = true
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.05
color = Color( 1, 0.745098, 0.411765, 0.533333 )
energy = 2.0
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.435294 )
shadow_filter = 1
shadow_filter_smooth = 5.2
__meta__ = {
"_edit_lock_": true
}

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="DecoyTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SoundTimer" type="Timer" parent="."]

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
bus = "SoundEffects"

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SoundEffects"

[node name="StepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 10.0
bus = "SoundEffects"
[connection signal="area_entered" from="Hitbox" to="." method="_enter_area"]
[connection signal="body_entered" from="Hitbox" to="." method="_got_caught"]
[connection signal="timeout" from="DecoyTimer" to="." method="_decoy_deployed"]
[connection signal="timeout" from="SoundTimer" to="." method="_reactivate_step"]
[connection signal="finished" from="HurtSound" to="." method="_respawn"]
